# libmonetra

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.cmake  Doxyfile.in  LICENSE  Makefile.am  Makefile.msc  README.md  README_8md_source.html  appveyor.yml  buildconf.sh  configure.ac  configure.tmp  dir_d44c64559bbebec7f509842c48db8b23.html  gh-pages-deploy.sh  group__LM__api.html  group__LM__conn.html  group__LM__deprecated.html  group__LM__init.html  group__LM__legacy.html  group__LM__trans.html  index.html  libmonetra__deprecated_8h_source.html  libmonetra__exp_8h_source.html  libmonetra__legacy_8h_source.html  license.txt.in  modules.html  monetra_8h_source.html  monetra__api_8h_source.html  navtreedata.js
CMakeModules/: EnableWarnings.cmake
CMakeModules/toolchains/: README
CMakeModules/toolchains/windows/: cygwin-mingw-common.cmake
apps/: CMakeLists.txt
apps/monetra_cli/: CMakeLists.txt
apps/monetra_cli/src/: CMakeLists.txt  cli_opts.c  cli_trans.c  monetra_cli.c  monetra_cli.h
apps/monetra_connload/: CMakeLists.txt
apps/monetra_connload/src/: CMakeLists.txt  monetra_connload.c
apps/monetra_load/: CMakeLists.txt
apps/monetra_load/src/: CMakeLists.txt  monetra_connload.c  monetra_load.c
examples/libmonetra_csharp/: Program.cs  libmonetra_csharp.csproj
examples/libmonetra_csharp/Properties/: AssemblyInfo.cs
examples/libmonetra_delphi/: Project1.pas
examples/libmonetra_vb6/: libmonetra_vb6.bas
examples/libmonetra_vbnet/: Module1.vb  libmonetra_vbnet.vbproj
examples/libmonetra_vbnet/libmonetra/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
examples/run_sale/: CMakeLists.txt  run_sale.c
include/: CMakeLists.txt  Makefile.am  libmonetra_deprecated.h  libmonetra_exp.h  libmonetra_legacy.h  monetra.h  monetra_api.h
resources/: jumpscript.bat.in  wix_patch.xml
src/: CMakeLists.txt  Makefile.am  Makefile.msc  monetra_conn.c  monetra_conn.h  monetra_conn_event.c  monetra_deprecated.c  monetra_init.c  monetra_legacy.c  monetra_parse.c  monetra_trans.c  monetra_trans.h  monetra_trans_structure.c
test/: CMakeLists.txt  Makefile.am  check_monetra.c  check_monetra_legacy.c
valgrind/: check.suppressions
